# ShinyHunter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
config/: key_config.ini
src/: main.py
src/shunter/: base.py  starter.py  stationary.py  type.py  wild.py
src/shunter/abstract/: abstract_shiny_hunter.py
src/shunter/models/: shiny_hunter.py
src/utils/: color_picker.py  color_point.py  color_point_picker.py  keyboard_simulator.py  keys_config.py  ocr.py  window_capture.py
